src/test/resources/refCompilerOutput/invalid/semanticErr/expressions/lessPairExpr.waccast
-- Compiling...
Errors detected during compilation! Exit code 200 returned.
Semantic Error at 16:10 -- Incompatible type Pair(INT, INT)
